# mnemonic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  mnemonic.toml.example
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/milestones/v1.0-phases/02-embedding/: 02-02-PLAN.md  02-VALIDATION.md
.planning/milestones/v1.0-phases/03-service-and-api/: 03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-embedding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-service-and-api/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-distribution/: 04-01-PLAN.md  04-02-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-config-cleanup/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-VALIDATION.md
.planning/phases/06-foundation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-VALIDATION.md
.planning/phases/07-summarization-engine/: 07-01-PLAN.md  07-01-SUMMARY.md  07-CONTEXT.md  07-VALIDATION.md
.planning/phases/08-compaction-core/: 08-CONTEXT.md  08-RESEARCH.md  08-VALIDATION.md
.planning/phases/09-http-integration/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-VALIDATION.md
.planning/phases/10-auth-schema-foundation/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-VALIDATION.md
.planning/phases/11-keyservice-core/: 11-DISCUSSION-LOG.md  11-RESEARCH.md  11-REVIEWS.md  11-VALIDATION.md
.planning/phases/12-auth-middleware/: 12-DISCUSSION-LOG.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-http-wiring-and-rest-key-endpoints/: 13-01-SUMMARY.md  13-RESEARCH.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-cli-key-management/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-CONTEXT.md  14-VALIDATION.md  14-VERIFICATION.md
.planning/phases/15-serve-subcommand/: 15-01-SUMMARY.md  15-RESEARCH.md  15-VALIDATION.md
.planning/phases/16-recall-subcommand/: 16-01-PLAN.md  16-02-PLAN.md  16-RESEARCH.md
.planning/phases/17-remember-subcommand/: 17-01-SUMMARY.md  17-02-SUMMARY.md  17-RESEARCH.md  17-VERIFICATION.md
.planning/phases/18-search-subcommand/: 18-01-PLAN.md  18-02-PLAN.md  18-02-SUMMARY.md  18-RESEARCH.md  18-VERIFICATION.md
.planning/phases/19-compact-subcommand/: 19-01-PLAN.md  19-02-PLAN.md  19-RESEARCH.md  19-VERIFICATION.md
.planning/phases/20-output-polish/: 20-01-PLAN.md  20-02-PLAN.md  20-VERIFICATION.md
.planning/phases/21-storage-trait-and-sqlite-backend/: 21-VALIDATION.md
.planning/phases/30-dashboard-foundation/: 30-01-PLAN.md  30-02-PLAN.md  30-HUMAN-UAT.md  30-RESEARCH.md  30-UI-SPEC.md  30-VALIDATION.md  30-VERIFICATION.md
.planning/phases/31-core-ui/: 31-01-PLAN.md  31-02-PLAN.md  31-03-PLAN.md  31-03-SUMMARY.md  31-04-PLAN.md  31-CONTEXT.md  31-DISCUSSION-LOG.md  31-REVIEWS.md  31-UI-SPEC.md
.planning/phases/32-operational-actions/: 32-01-PLAN.md  32-02-PLAN.md  32-02-SUMMARY.md  32-DISCUSSION-LOG.md  32-UI-SPEC.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/components/: AgentsTab.tsx  ClusterPreview.tsx  CompactTab.tsx  DistanceBar.tsx  ErrorMessage.tsx  FilterBar.tsx  Header.tsx  HealthCard.tsx  LoginScreen.tsx  MemoriesTab.tsx  MemoryRow.tsx  Pagination.tsx  SearchTab.tsx  SkeletonRows.tsx  TabBar.tsx
proto/: mnemonic.proto
src/: auth.rs  cli.rs  compaction.rs  config.rs  dashboard.rs  db.rs  embedding.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  summarization.rs
src/grpc/: auth.rs  mod.rs
src/storage/: mod.rs  postgres.rs  qdrant.rs  sqlite.rs
tests/: cli_integration.rs  dashboard_integration.rs  error_types.rs  grpc_integration.rs  integration.rs
(+156 files in other folders)
