[package]
name = "mnemonic"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic agent memory server — persistent semantic memory via a simple REST API"
license = "MIT"
repository = "https://github.com/chrisesposito92/mnemonic"
homepage = "https://github.com/chrisesposito92/mnemonic"
keywords = ["agent", "memory", "embeddings", "semantic-search", "llm"]
categories = ["web-programming::http-server", "database"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1.7"
tokio-rusqlite = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.4"
hf-hub = "0.5"
tokenizers = "0.22"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
zerocopy = { version = "0.8", features = ["derive"] }
blake3 = "1.8"
rand = { version = "0.9", features = ["std", "std_rng", "os_rng"] }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
