[package]
name = "mnemonic"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic agent memory server — persistent semantic memory via a simple REST API"
license = "MIT"
repository = "https://github.com/chrisesposito92/mnemonic"
homepage = "https://github.com/chrisesposito92/mnemonic"
keywords = ["agent", "memory", "embeddings", "semantic-search", "llm"]
categories = ["web-programming::http-server", "database"]

[features]
# Opt-in storage backends. The default binary carries zero new dependencies.
# Qdrant backend (implemented in Phase 23)
backend-qdrant = ["dep:qdrant-client", "dep:prost-types"]
# Postgres backend (implemented in Phase 24)
backend-postgres = ["dep:sqlx", "dep:pgvector"]
# gRPC interface (Phase 26). tonic 0.13 / prost 0.13 — pinned to match
# qdrant-client's prost ^0.13.3 anchor. DO NOT upgrade to tonic 0.14
# without verifying qdrant-client also moves to prost 0.14.
interface-grpc = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tonic-health", "dep:tonic-reflection", "dep:tower"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1.7"
tokio-rusqlite = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.4"
hf-hub = "0.5"
tokenizers = "0.22"
async-trait = "0.1"
qdrant-client = { version = "1", optional = true }
prost-types = { version = "0.13", optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }
reqwest = { version = "0.13", features = ["json"] }
http = "1"
zerocopy = { version = "0.8", features = ["derive"] }
blake3 = "1.8"
rand = { version = "0.9", features = ["std", "std_rng", "os_rng"] }
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
tonic-health = { version = "0.13", optional = true }
tonic-reflection = { version = "0.13", optional = true }
tower = { version = "0.5", optional = true }

[build-dependencies]
# tonic-build is always present as a build dependency so build.rs compiles correctly.
# The CARGO_FEATURE_INTERFACE_GRPC env var check in build.rs gates actual proto codegen.
tonic-build = "0.13"

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
